Testes com clique de botão e msg com Toast.

--- a/conversor-de-moedas/app/src/main/res/values/strings.xml
+++ b/conversor-de-moedas/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="qual_o_valor_em_real">Qual o valor em real?!</string>
     <string name="qual_o_valor_em_dolar">Qual o valor em dolar</string>
     <string name="qual_o_valor_em_euro">Qual o valor em euro</string>
+    <string name="clicou">Clicou, </string>
 </resources>
