criação das activitys e seus elementos.

--- a/festa-fim-de-ano/app/src/main/res/values/strings.xml
+++ b/festa-fim-de-ano/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FestaFimDeAno</string>
     <string name="dias_restantes_para_o_fim_do_ano">Dias restantes para o fim do ano</string>
+    <string name="voce_vai_participar">Você vai participar?</string>
 </resources>
