--- a/festa-fim-de-ano/app/src/main/res/values/strings.xml
+++ b/festa-fim-de-ano/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">FestaFimDeAno</string>
     <string name="dias_restantes_para_o_fim_do_ano">Dias restantes para o fim do ano</string>
     <string name="voce_vai_participar">Você vai participar?</string>
+    <string name="dias"> dias</string>
+    <string name="nao_confirmado">NÃO CONFIRMADO</string>
+    <string name="sim">SIM</string>
+    <string name="nao">NÃO</string>
 </resources>
