--- a/cursoApp/app/src/main/res/values/strings.xml
+++ b/cursoApp/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="endereco">"Endereço: "</string>
     <string name="id">"Id: "</string>
     <string name="status">"Status: "</string>
+    <string name="entidade_removido">Entidade removido com sucesso</string>
+    <string name="id_null">Id é null</string>
+    <string name="salvar_falha">Falha ao tentar salvar</string>
+    <string name="salvar_sucesso">Entidade salva com sucesso.</string>
+    <string name="remover_falha">Falha ao tentar remover</string>
+    <string name="remover_sucesso">Entidade removida com sucesso</string>
+
 </resources>
